--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "food-festival",
+  "name": "module-18-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "assets/js/script.js",
   "scripts": {
     "webpack": "webpack --watch",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gwacky/food-festival.git"
+    "build": "webpack",
+    "start:dev": "webpack-dev-server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gwacky/food-festival/issues"
-  },
-  "homepage": "https://github.com/gwacky/food-festival#readme",
   "devDependencies": {
-    "webpack": "^5.67.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2"
+    "@webpack-cli/serve": "^1.6.1",
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^6.0.0",
+    "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^4.7.3",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
-    "popper.js": "^1.16.0",
+    "popper.js": "^1.16.1",
     "save": "^2.4.0"
   }
 }
